add pact tests